# Dioxuscut

./: .gitignore  Cargo.toml  LICENSE-MIT  PROJECT.md  README.md  TEST_INFRA.md  data.json
.agents/: ORIGINAL_REQUEST.md
.agents/e2e_testing_track/: BRIEFING.md  ORIGINAL_REQUEST.md
.agents/orchestrator/: BRIEFING.md  ORIGINAL_REQUEST.md  plan.md  progress.md
.agents/sentinel/: BRIEFING.md  handoff.md
.agents/teamwork_preview_auditor_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  audit.md  handoff.md  progress.md
.agents/teamwork_preview_auditor_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  audit.md  handoff.md  progress.md
.agents/teamwork_preview_auditor_m3/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/teamwork_preview_explorer_phase1_1/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/teamwork_preview_explorer_phase1_2/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md  progress.md
.agents/teamwork_preview_explorer_phase1_3/: BRIEFING.md  ORIGINAL_REQUEST.md  analysis.md  handoff.md
.agents/teamwork_preview_reviewer_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md  review.md
.agents/teamwork_preview_reviewer_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  review.md
.agents/teamwork_preview_reviewer_m3/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.agents/teamwork_preview_worker_m1/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/teamwork_preview_worker_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/teamwork_preview_worker_m3/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/teamwork_preview_worker_m4/: BRIEFING.md  ORIGINAL_REQUEST.md  progress.md
.github/workflows/: ci.yml  e2e.yml  release.yml
apps/example/: Cargo.toml
apps/example/src/: main.rs
apps/studio/: Cargo.toml
apps/studio/src/: main.rs
crates/animation/: Cargo.toml
crates/animation/src/: easing.rs  interpolate.rs  interpolate_colors.rs  lib.rs  spring.rs
crates/captions/: Cargo.toml
crates/captions/src/: lib.rs  line_wrapper.rs  scene.rs  srt_parser.rs  tiktok_captions.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: composition.rs  lib.rs  main.rs  rhai_runtime.rs
crates/cli/tests/: e2e_cli_subprocess.rs  native_media_integration.rs  render_formats_integration.rs  rhai_render_integration.rs  tier1_feature_coverage.rs  tier2_boundary_cases.rs  tier3_subsystem_integration.rs  tier4_acceptance_scenario.rs
crates/composition/: Cargo.toml
crates/composition/src/: lib.rs  scene_emitter.rs
crates/core/: Cargo.toml
crates/core/src/: absolute_fill.rs  composition.rs  freeze.rs  lib.rs  sequence.rs  types.rs
crates/core/src/hooks/: mod.rs  use_current_frame.rs  use_input_props.rs  use_video_config.rs
crates/core/src/timeline/: context.rs  mod.rs
crates/media/: Cargo.toml
crates/media/src/: audio.rs  img.rs  lib.rs  scene.rs  video.rs
crates/noise/: Cargo.toml
crates/noise/src/: lib.rs  noise_bg.rs  seed.rs  simplex.rs
crates/paths/: Cargo.toml
crates/paths/src/: evolve_path.rs  length.rs  lib.rs  parser.rs  point_at_length.rs  transform.rs  types.rs
crates/player/: Cargo.toml
crates/player/src/: controls.rs  lib.rs  native_preview.rs  player.rs
crates/rasterizer/: Cargo.toml
crates/rasterizer/src/: backend.rs  font.rs  image_cache.rs  lib.rs  render.rs  scene.rs  tiny_skia_backend.rs  video_cache.rs  wgpu_backend.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: browser.rs  encode.rs  lib.rs  render_frames.rs  server.rs
crates/shapes/: Cargo.toml
crates/shapes/src/: arrow.rs  circle.rs  lib.rs  pie.rs  polygon.rs  rect.rs  render_svg.rs  scene.rs  star.rs  triangle.rs
crates/transitions/: Cargo.toml
crates/transitions/src/: fade.rs  lib.rs  scene.rs  slide.rs
crates/vdom/: Cargo.toml
crates/vdom/src/: composition.rs  css.rs  dom.rs  lib.rs  scene.rs
examples/: hello-props.json  hello.rhai
