[workspace]
resolver = "2"
members = [
    "crates/animation",
    "crates/core",
    "crates/media",
    "crates/player",
    "crates/renderer",
    "crates/transitions",
    "crates/cli",
    "apps/studio",
    "apps/example",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["Dioxuscut Contributors"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/sjkim1127/Dioxuscut"

[workspace.dependencies]
# UI framework
dioxus            = { version = "0.6", features = ["web", "desktop"] }
dioxus-web        = { version = "0.6" }
dioxus-desktop    = { version = "0.6" }

# Async runtime
tokio             = { version = "1", features = ["full"] }
futures           = "0.3"

# Serialization
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"

# Logging
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math / utilities
ordered-float     = "4"
num-traits        = "0.2"

# Error handling
anyhow            = "1"
thiserror         = "1"

# Internal crates
dioxuscut-animation   = { path = "crates/animation" }
dioxuscut-core        = { path = "crates/core" }
dioxuscut-media       = { path = "crates/media" }
dioxuscut-player      = { path = "crates/player" }
dioxuscut-renderer    = { path = "crates/renderer" }
dioxuscut-transitions = { path = "crates/transitions" }

[profile.release]
opt-level  = 3
lto        = true
codegen-units = 1
strip      = true
