[workspace]
resolver = "2"
members = [
    "crates/animation",
    "crates/core",
    "crates/media",
    "crates/player",
    "crates/renderer",
    "crates/transitions",
    "crates/cli",
    "crates/shapes",
    "crates/paths",
    "crates/captions",
    "crates/noise",
    "crates/rasterizer",
    "apps/studio",
    "apps/example",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["Dioxuscut Contributors"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/sjkim1127/Dioxuscut"

[workspace.dependencies]
# UI framework
dioxus            = { version = "0.6", features = ["web", "desktop"] }
dioxus-web        = { version = "0.6" }
dioxus-desktop    = { version = "0.6" }

# Async runtime
tokio             = { version = "1", features = ["full"] }
futures           = "0.3"

# Serialization
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"

# Logging
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math / utilities
ordered-float     = "4"
num-traits        = "0.2"

# Image / rasterizer
image             = "0.25"
tiny-skia         = "0.11"
ab_glyph          = "0.2"

# Error handling
anyhow            = "1"
thiserror         = "1"

# Parallelism
rayon             = "1"

# Web server & HTTP
axum              = "0.7"
tower-http        = { version = "0.5", features = ["fs", "trace", "cors"] }
reqwest           = { version = "0.12", features = ["json"] }

# Internal crates
dioxuscut-animation   = { version = "0.1.0", path = "crates/animation" }
dioxuscut-core        = { version = "0.1.0", path = "crates/core" }
dioxuscut-media       = { version = "0.1.0", path = "crates/media" }
dioxuscut-player      = { version = "0.1.0", path = "crates/player" }
dioxuscut-renderer    = { version = "0.1.0", path = "crates/renderer" }
dioxuscut-transitions = { version = "0.1.0", path = "crates/transitions" }
dioxuscut-shapes      = { version = "0.1.0", path = "crates/shapes" }
dioxuscut-paths       = { version = "0.1.0", path = "crates/paths" }
dioxuscut-captions    = { version = "0.1.0", path = "crates/captions" }
dioxuscut-noise       = { version = "0.1.0", path = "crates/noise" }
dioxuscut-rasterizer  = { version = "0.1.0", path = "crates/rasterizer" }





[profile.release]
opt-level  = 3
lto        = true
codegen-units = 1
strip      = true
