[package]
name        = "dioxuscut-animation"
description = "Animation primitives for Dioxuscut — interpolate, spring, easing (Remotion-compatible)"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
readme.workspace      = true

[dependencies]
num-traits   = { workspace = true }
ordered-float = { workspace = true }
serde        = { workspace = true, optional = true }

[features]
default  = []
serde    = ["dep:serde"]

[dev-dependencies]
approx = "0.5"
