[package]
name        = "dioxuscut-cli"
description = "CLI tool for rendering Dioxuscut compositions headlessly"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[lib]
name = "dioxuscut_cli"
path = "src/lib.rs"

[[bin]]
name = "dioxuscut"
path = "src/main.rs"

[dependencies]
dioxuscut-rasterizer = { workspace = true }
clap               = { version = "4.4", features = ["derive"] }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
serde_json         = { workspace = true }

[dev-dependencies]
dioxuscut-renderer = { workspace = true }
reqwest            = { workspace = true }

[features]
default = []
gpu     = ["dioxuscut-rasterizer/gpu"]
