[package]
name        = "dioxuscut-cli"
description = "CLI tool for rendering Dioxuscut compositions headlessly"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
readme.workspace      = true

[lib]
name = "dioxuscut_cli"
path = "src/lib.rs"

[[bin]]
name = "dioxuscut"
path = "src/main.rs"

[dependencies]
dioxuscut-composition = { workspace = true }
dioxuscut-rasterizer = { workspace = true }
clap               = { version = "4.4", features = ["derive"] }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
serde_json         = { workspace = true }
rhai               = { workspace = true, optional = true }

[dev-dependencies]
dioxuscut-renderer = { workspace = true }
reqwest            = { workspace = true }
serde_json         = { workspace = true }

[[test]]
name    = "e2e_cli_subprocess"
harness = true

[features]
default = []
gpu     = ["dioxuscut-rasterizer/gpu"]
rhai    = ["dep:rhai"]
