[package]
name        = "dioxuscut-core"
description = "Core Dioxus components and hooks for Dioxuscut — Composition, Sequence, AbsoluteFill, etc."
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
dioxus             = { workspace = true }
dioxuscut-animation = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }

[features]
default = ["web"]
web     = ["dioxus/web"]
desktop = ["dioxus/desktop"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window"] }
js-sys = "0.3"

