[package]
name        = "dioxuscut-media"
description = "Media components for Dioxuscut — Img, Video, Audio"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
dioxus             = { workspace = true }
dioxuscut-core     = { workspace = true }
serde              = { workspace = true }
tracing            = { workspace = true }
