[package]
name        = "dioxuscut-media"
description = "Media components for Dioxuscut — Img, Video, Audio"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
readme.workspace      = true

[dependencies]
dioxus             = { workspace = true }
dioxuscut-core     = { workspace = true }
dioxuscut-composition = { workspace = true }
dioxuscut-rasterizer  = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
