[package]
name        = "dioxuscut-noise"
description = "Procedural Simplex 2D/3D/4D noise generation and organic noise backgrounds for Dioxuscut"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
dioxus         = { workspace = true }
dioxuscut-core = { workspace = true }
serde          = { workspace = true }
