[package]
name        = "dioxuscut-player"
description = "Interactive video player component for Dioxuscut"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
readme.workspace      = true

[dependencies]
dioxus             = { workspace = true }
dioxuscut-core      = { workspace = true }
dioxuscut-animation = { workspace = true }
dioxuscut-composition = { workspace = true }
dioxuscut-rasterizer  = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tokio              = { workspace = true }
