[package]
name        = "dioxuscut-rasterizer"
description = "Native CPU/GPU rasterizer for browser-free Dioxuscut frame rendering"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
thiserror  = { workspace = true }
image      = { workspace = true }
tiny-skia  = { workspace = true }
ab_glyph   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
# Enable wgpu GPU-accelerated offscreen rendering
gpu = []
