[package]
name        = "dioxuscut-renderer"
description = "Headless frame renderer and video encoder for Dioxuscut"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
dioxuscut-core     = { path = "../core" }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
headless_chrome    = "1.0.12"
