[package]
name        = "dioxuscut-renderer"
description = "Headless frame renderer and video encoder for Dioxuscut"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
reqwest            = { workspace = true }


[dev-dependencies]
image              = "0.25"
