[package]
name        = "dioxuscut-shapes"
description = "Procedural SVG shapes for Dioxuscut — Circle, Rect, Star, Triangle, Polygon, Pie, Arrow"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
readme.workspace      = true

[dependencies]
dioxus              = { workspace = true }
dioxuscut-animation = { workspace = true }
dioxuscut-composition = { workspace = true }
dioxuscut-rasterizer  = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
