[package]
name        = "dioxuscut-transitions"
description = "Transition components for Dioxuscut — Fade, Slide, Wipe, etc."
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
readme.workspace      = true

[dependencies]
dioxus              = { workspace = true }
dioxuscut-core      = { workspace = true }
dioxuscut-animation = { workspace = true }
dioxuscut-composition = { workspace = true }
dioxuscut-rasterizer  = { workspace = true }
serde_json            = { workspace = true }
