[package]
name        = "dioxuscut-vdom"
description = "Dioxus VirtualDom and CSS to native Dioxuscut Scene adapter"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true
readme.workspace      = true

[dependencies]
dioxus-core          = { workspace = true }
dioxuscut-composition = { workspace = true }
dioxuscut-rasterizer  = { workspace = true }
serde_json            = { workspace = true }
taffy                 = { workspace = true }
thiserror             = { workspace = true }

[dev-dependencies]
dioxus = { workspace = true }
